--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,27 +1,24 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
     width: 100vw;
     height: 100vh;
-    background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;  
 }
 
 body {
-    background-image: url(../imagens/fundo-madeira.jpg);
-    background-repeat: no-repeat;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
 
 main {
     height: 100vh;
-    width: 100vw;
     position: relative;
-
 }
 
 section > a > img {
@@ -45,10 +42,10 @@ section > a > img:hover {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    
+    background: url(../imagens/frame-iphone.png) no-repeat;
     height: 627px;
     width: 311px;
-    background-image: url(../imagens/frame-iphone.png);
-    background-repeat: no-repeat;
 }
 
 #home {
